--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "react": "16.13.0",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.0",
-    "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.12",
     "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "8.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +43,6 @@
     "not op_mini all"
   ],
   "optionalDependencies": {
-    "@types/googlemaps": "3.39.3",
     "@types/markerclustererplus": "2.1.33",
     "eslint-plugin-flowtype": "3.13.0",
     "typescript": "3.8.3"
