--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "black-dashboard-react",
   "version": "1.1.0",
-  "private": true,
-  "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
   "dependencies": {
     "@types/react": "16.9.23",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
+    "express": "^4.17.1",
     "history": "4.10.1",
     "node-sass": "4.13.1",
     "perfect-scrollbar": "1.5.0",
@@ -24,8 +23,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "start": "node server.js",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
@@ -44,11 +43,6 @@
   ],
   "optionalDependencies": {
     "@types/markerclustererplus": "2.1.33",
-    "eslint-plugin-flowtype": "3.13.0",
     "typescript": "3.8.3"
-  },
-  "devDependencies": {
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8"
   }
 }
