--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "black-dashboard-react",
   "version": "1.1.0",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/react": "16.9.23",
+    "autosuggest-highlight": "^3.1.1",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
     "express": "^4.17.1",
@@ -11,6 +14,7 @@
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.0",
+    "react-bootstrap-typeahead": "^5.1.1",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.0",
     "react-notification-alert": "0.0.12",
@@ -23,7 +27,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
